# diesel-clickhouse

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/: CONNECTION_DESIGN.md  COOKBOOK.md  FEATURE_MATRIX.md  TUTORIAL.md  USAGE.md
examples/: cookbook.rs  tutorial.rs
research/: diesel-clickhouse-external.md
src/: aggregates.rs  backend.rs  bind.rs  cast.rs  clauses.rs  connection.rs  ddl.rs  docs.rs  functions.rs  grouping.rs  higher_order.rs  joins.rs  json.rs  lib.rs  operators.rs  ordering.rs  params.rs  predicate.rs  serialize.rs  types.rs  vectors.rs  window.rs
tests/: compile.rs  live_clickhouse.rs  sql_render.rs
tests/compile/fail/: aggregate_literal_without_expression.rs  aggregate_literal_without_expression.stderr  join_on_requires_bool.rs  join_on_requires_bool.stderr
tests/compile/pass/: clickhouse_join_raw_select.rs  clickhouse_join_typed_filter.rs  clickhouse_join_typed_select.rs  connection_load.rs  ddl_and_aggregates.rs  render_query.rs
