[package]
name = "diesel-clickhouse"
version = "0.4.0"
edition = "2024"
rust-version = "1.96"
description = "Diesel ORM query-builder extensions for ClickHouse SQL."
documentation = "https://docs.rs/diesel-clickhouse"
repository = "https://github.com/cjrh/diesel-clickhouse"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "clickhouse", "sql", "orm", "analytics"]
categories = ["database"]

[features]
default = []
bigdecimal = ["dep:bigdecimal", "diesel/numeric"]

[dependencies]
# Custom backends need Diesel's intentionally-unstable third-party backend
# surface. Keep the upper bound explicit: each Diesel minor can alter backend
# internals and should be validated before widening this range.
diesel = { version = ">=2.3, <2.4", default-features = false, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "with-deprecated"] }
bigdecimal = { version = ">=0.0.13, <0.5.0", optional = true }
clickhouse = "0.15"
tokio = { version = "1", features = ["rt"] }
url = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["clickhouse"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trybuild = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
# Release tags trigger .github/workflows/release.yml, which publishes the crate.
# Keep cargo-release responsible for version bumping, changelog replacement,
# tagging, and pushing only.
publish = false
tag-name = "v{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = '''## [Unreleased]

## [{{version}}] — {{date}}'''

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[Unreleased\]: https://github\.com/cjrh/diesel-clickhouse/compare/v[^\n]+'
replace = '''[Unreleased]: https://github.com/cjrh/diesel-clickhouse/compare/v{{version}}...HEAD
[{{version}}]: https://github.com/cjrh/diesel-clickhouse/releases/tag/v{{version}}'''
